# CompanyScope

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ai-ci.yml
prompts/: system.txt
scripts/: check_thresholds.py
src/: agent.py  app.py  config.py  embed.py  guard.py  ingest.py  tools.py
tests/: eval_data.yaml  test_eval.py
