[project]
name = "company-scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "edgartools>=5.36.0",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "langfuse>=4.7.1",
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.16",
    "sentence-transformers>=5.5.1",
    "slowapi>=0.1.9",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]
